--- a/assets/scss/_editor_ui.scss
+++ b/assets/scss/_editor_ui.scss
@@ -286,25 +286,93 @@ input[type="range"] { width: 100%; accent-color: #fff; cursor: pointer; }
 
 
 
-/* ICÔNES DE POSITIONNEMENT & JUSTIFICATION */
-.ico-ui {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* editor_ui.scss - ALIGNÉ SUR LE MODÈLE DE RÉFÉRENCE */
+.ico-txt-align {
     display: inline-block;
-    width: 18px;
-    height: 14px;
+    width: 16px;
+    height: 12px;    
     position: relative;
-    
-    // Barre de texte générique (pour les icônes de float)
+    vertical-align: middle;
+    box-sizing: border-box;
+    border-top: 2px solid #fff; 
+
     &::after {
         content: "";
         position: absolute;
-        background: #555;
+        bottom: 0; 
+        left: 0;
+        width: 100%; 
+        height: 2px;
+        background: #fff;
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 4px; 
+        height: 2px;
+        background: #fff;
     }
 }
 
-// Icônes de JUSTIFICATION (Lignes simples)
-.ico-just-left { border-top: 2px solid #fff; border-bottom: 2px solid #fff; &::after { top: 4px; left: 0; width: 12px; height: 2px; } }
-.ico-just-center { border-top: 2px solid #fff; border-bottom: 2px solid #fff; &::after { top: 4px; left: 3px; width: 12px; height: 2px; } }
-.ico-just-right { border-top: 2px solid #fff; border-bottom: 2px solid #fff; &::after { top: 4px; right: 0; width: 12px; height: 2px; } }
+.ico-txt-left::before   { left: 0; width: 10px; }
+.ico-txt-center::before { left: 3px; width: 10px; }
+.ico-txt-right::before  { right: 0; width: 10px; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
